Site final - bug fix

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                  <p></p>
                  <div class="verif">
                     <h5>R$3,00</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 <div class="opcao" onclick="selecionar2(this)">
@@ -97,7 +97,7 @@
                  <p></p>
                  <div class="verif">
                     <h5>R$2,50</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 <div class="opcao" onclick="selecionar2(this)">
@@ -106,7 +106,7 @@
                  <p></p>
                  <div class="verif">
                     <h5>R$2,00</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 <div class="opcao" onclick="selecionar2(this)">
@@ -115,7 +115,7 @@
                <p></p>
                <div class="verif">
                   <h5>R$6,50</h5>
-                  <ion-icon name="leaf-outline"></ion-icon>
+                  <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                </div>
               </div>
                 
@@ -128,25 +128,28 @@
                 <div class="opcao" onclick="selecionar3(this)">
                     <img src="imagens/maionses.png" >
                     <h4>Maionese Caseira</h4>
+                    <p></p>
                  <div class="verif">
                     <h5>R$1,50</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 <div class="opcao" onclick="selecionar3(this)">
                     <img src="imagens/barbecue.png" >
                     <h4>Barbecue</h4>
+                    <p></p>
                  <div class="verif">
                     <h5>R$1,50</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 <div class="opcao" onclick="selecionar3(this)">
                     <img src="imagens/molhoE.png" >
                     <h4>Molho especial</h4>
+                    <p></p>
                  <div class="verif">
                     <h5>R$1,50</h5>
-                    <ion-icon name="leaf-outline"></ion-icon>
+                    <ion-icon class="escondido1" name="leaf-outline"></ion-icon>
                  </div>
                 </div>
                 
